--- a/src/main/webapp/resources/css/admin/goodsEnroll.css
+++ b/src/main/webapp/resources/css/admin/goodsEnroll.css
@@ -171,6 +171,21 @@ input[name='publeYear'] {
 	background-color: #c8c8c8;
 }
 
+/* 작가 선택 css 설정 */
+.authorId_btn{
+	margin-left: 20px;
+	width: 14%;
+	height: 38px;
+	font-weight: 600;
+	background-color: #dfe8f5;
+	font-size: 15px;
+	cursor: pointer;
+}
+#authorName_input{
+	width: 80%;
+	text-align: center;
+}
+
 /* float 속성 해제 */
 .clearfix{
 	clear: both;
