5/16 [18] 상품등록-유효성 검사

--- a/src/main/webapp/resources/css/admin/goodsEnroll.css
+++ b/src/main/webapp/resources/css/admin/goodsEnroll.css
@@ -201,6 +201,15 @@ input[name='publeYear'] {
 	margin-top: 20px;
 }
 
+/* 입력란 공란 경고 태그 */
+.ck_warn{
+	display: none;
+	padding-top: 10px;
+	text-align: center;
+	color: #e05757;
+	font-weight: 300;
+}
+
 /* float 속성 해제 */
 .clearfix{
 	clear: both;
