5/16 [18] 상품등록-입력란 수정 & 외래키 설정

--- a/src/main/webapp/resources/css/admin/goodsEnroll.css
+++ b/src/main/webapp/resources/css/admin/goodsEnroll.css
@@ -210,6 +210,13 @@ input[name='publeYear'] {
 	font-weight: 300;
 }
 
+/* 할인 가격 문구 */
+.step_val{
+	display: block;
+	padding-top: 5px;
+	font-weight: 500;
+}
+
 /* float 속성 해제 */
 .clearfix{
 	clear: both;
