--- a/src/main/webapp/resources/css/search.css
+++ b/src/main/webapp/resources/css/search.css
@@ -266,6 +266,17 @@ a{
     font-size: 25px;
 }
 
+/* 상품 이미지 관련 */
+.image_wrap {
+    width: 100%;
+    height: 100%;
+}	
+.image_wrap img {
+    max-width: 85%;
+    height: auto;
+    display: block;
+}
+
 /* footer navi 영역 */
 .footer_nav{
 	width: 100%;
